# FPGAMobileGameSync

./: .gitignore  LICENSE  README.md  mister-thor-sync.json  mister-thor-sync.yaml  pyproject.toml
src/fpgmobilegamesync/: __init__.py  cli.py  compare.py  config.py  converter.py  doctor.py  executor.py  fingerprint.py  object_store.py  planner.py  progress.py  psx_auto_mapping.py  psx_memory_card.py  remote_scanner.py  s3_store.py  save_paths.py  scanner.py  script_generator.py  sftp_client.py  sync_engine.py
tests/: test_compare.py  test_converter.py  test_doctor.py  test_executor.py  test_object_store.py  test_planner.py  test_progress.py  test_psx_auto_mapping.py  test_psx_memory_card.py  test_remote_scanner.py  test_s3_store.py  test_save_paths.py  test_scanner.py  test_script_generator.py  test_sftp_client.py  test_sync_engine.py
